--- a/project/src/main/resources/templates/user/create.html
+++ b/project/src/main/resources/templates/user/create.html
@@ -8,25 +8,27 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
+
         function userCreate() {
-            if (form.id.value == "") {
+            const form = document.getElementById("user-join-form");
+            if (form.id.value === "") {
                 alert("사용자 ID를 입력하십시오.");
-                form.userId.focus();
+                form.id.focus();
                 return false;
             }
-            if (form.password.value == "") {
+            if (form.password.value === "") {
                 alert("비밀번호를 입력하십시오.");
                 form.password.focus();
                 return false;
             }
-            if (form.password.value != form.password2.value) {
+            if (form.password.value !== form.password2.value) {
                 alert("비밀번호가 일치하지 않습니다.");
                 form.name.focus();
                 return false;
             }
 
-            var emailExp = /^[A-Za-z0-9_\.\-]+@[A-Za-z0-9\-]+\.[A-Za-z0-9\-]+/;
-            if (emailExp.test(form.email.value) == false) {
+            var emailExp = /^[a-zA-Z0-9._%+-]{1,20}@[a-zA-Z0-9.-]{1,20}(\.[a-zA-Z]{2,3})+$/;
+            if (emailExp.test(form.email.value) === false) {
                 alert("이메일 형식이 올바르지 않습니다.");
                 form.email.focus();
                 return false;
@@ -41,60 +43,54 @@
 <div class="container">
     <section class="container mt-3" style="max-width: 560px;">
         <div class="row col-lg-12">
-            <h6 class="text-danger" th:if="${exception}" th:text="${message}" />
+            <h6 class="text-danger" th:if="${message != null}" th:text="${message}" />
         </div>
 
-        <form action="#" name="form" method="POST" th:action="@{/user/create}">
+        <form id="user-join-form" name="form" method="POST" action="/user/create">
             <div class="form-group" id="userType">
                 <label for="userType" ></label>
                 <div class="form-check form-check-inline">
-                    <input value="user" class="form-check-input" type="radio"
+                    <input value="ROLE_USER" class="form-check-input" type="radio"
                            name="userType" id="flexRadioDefault2" checked> <label
                         class="form-check-label" for="flexRadioDefault2"> 회원
                 </label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input value="trainer" class="form-check-input" type="radio"
-                           name="userType" id="flexRadioDefault1"> <label
+                    <input value="ROLE_TRAINER" class="form-check-input" type="radio"
+                           name="userType" id="flexRadioDefault1" th:checked="${userType != null && userType == 'ROLE_TRAINER'}"> <label
                         class="form-check-label" for="flexRadioDefault1"> 강사
                 </label>
                 </div>
             </div>
-            <div class="form-group row" id="id">
+            <div class="form-group row" id="id-input">
                 <label for="id" class="col-lg-2 col-form-label">아이디</label>
                 <div class="col-lg-10">
-                    <input type="text" name="id" class="form-control" placeholder="아이디">
+                    <input type="text" name="id" id="id" class="form-control" placeholder="아이디" th:value="${id}">
                 </div>
             </div>
-            <div class="form-group row" id="password">
+            <div class="form-group row" id="password-input">
                 <label for="password" class="col-lg-2 col-form-label">비밀번호</label>
                 <div class="col-lg-10">
-                    <input type="password" name="password" class="form-control" placeholder="password">
+                    <input type="password" id="password" name="password" class="form-control" placeholder="password" th:value="${password}">
                 </div>
             </div>
-            <div class="form-group row" id="password2">
+            <div class="form-group row" id="password2-input">
                 <label for="password2" class="col-lg-2 col-form-label">비밀번호 확인</label>
                 <div class="col-lg-10" style="margin: auto">
-                    <input type="password" name="password2" class="form-control" placeholder="비밀번호 확인">
+                    <input type="password" name="password2" id="password2" class="form-control" placeholder="비밀번호 확인">
                 </div>
             </div>
-            <div class="form-group row" id="email">
+            <div class="form-group row" id="email-input">
                 <label for="email" class="col-lg-2 col-form-label">이메일</label>
                 <div class="col-lg-10">
-                    <input type="text" name="email" class="form-control" placeholder="you@example.com">
+                    <input type="text" name="email" id="email" class="form-control" placeholder="you@example.com" th:value="${email}">
 <!--                    <c:if test="${registerFailed}">value="${user.email}"</c:if>>-->
                 </div>
             </div>
-            <div class="form-group row" id="phone">
-                <label for="phone" class="col-lg-2 col-form-label">연락처</label>
-                <div class="col-lg-10" style="margin: auto">
-                    <input type="text" name="phone" class="form-control" placeholder="연락처">
-                </div>
-            </div>
-            <div class="form-group row" id="name">
+            <div class="form-group row" id="name-input">
                 <label for="name" class="col-lg-2 col-form-label">이름</label>
                 <div class="col-lg-10" style="margin: auto">
-                    <input type="text" name="name" class="form-control" placeholder="이름">
+                    <input type="text" name="name" id="name" class="form-control" placeholder="이름" th:value="${name}">
                 </div>
             </div>
             <br>
