--- a/project/src/main/resources/templates/header.html
+++ b/project/src/main/resources/templates/header.html
@@ -15,15 +15,15 @@
         <div style="background-color: #3A4BA7; color: #FFFFFF; font-size: 20px">
             <div class="container p-3">
                 <div class="row">
-                    <div class="col" th:if="${session.userId == 'admin'}">
+                    <div class="col" th:if="${session.userType == 'ROLE_ADMIN'}">
                         <a style="text-decoration: none; color: inherit;"
                            th:href="@{/admin}">관리자페이지</a>
                     </div>
-                    <div class="col" th:if="${session.userType == 'trainer' }">
+                    <div class="col" th:if="${session.userType == 'ROLE_TRAINER' }">
                         <a style="text-decoration: none; color: inherit;"
                            th:href="@{/workout/add}">운동 등록</a>
                     </div>
-                    <div class="col" th:if="${userType == 'user' }">
+                    <div class="col" th:if="${session.userType == 'ROLE_USER' }">
                         <a style="text-decoration: none; color: inherit;"
                            th:href="@{/workout/list}">운동 예약</a>
                     </div>
